# near-hackathon

./: .gitignore  README.md
NFT/: Cargo.toml
NFT-MARKET/: Cargo.toml
NFT-MARKET/neardev/: dev-account  dev-account.env
NFT-MARKET/scripts/: build.sh  deploy.sh  dev-deploy.sh  dev-init.sh  init.sh  market_floor_price.sh  market_offer.sh  market_remove_sale.sh  market_sale.sh  market_sales_by_nft_contract_id.sh  market_sales_by_owner_id.sh  market_sum_price.sh  market_update_price.sh
NFT-MARKET/scripts/neardev/: dev-account  dev-account.env
NFT-MARKET/src/: ft_callbacks.rs  lib.rs  nft_callbacks.rs
NFT-MARKET/src/market/: events.rs  macros.rs  meta.rs  mod.rs  utils.rs
NFT-MARKET/src/market/base/: core_impl.rs  events.rs  external.rs  internal.rs  mod.rs
NFT-MARKET/src/market/enumeration/: enumeration_impl.rs  (+1 more)
NFT/scripts/: deploy.sh  dev-deploy.sh  dev-init.sh  dev-migrate.sh  dev-test.sh  init.sh  nft_approve.sh  nft_burn.sh  nft_create.sh  nft_fractionation.sh  nft_fractionation_complete.sh  nft_fractionations.sh  nft_fractionations_supply.sh  nft_mint.sh  nft_sale.sh  nft_sale_add.sh  nft_sale_not_minted.sh  nft_sale_start.sh  nft_sale_token_ids.sh  nft_sale_token_locked.sh  nft_sale_update.sh  nft_sales.sh  nft_sales_locked.sh  nft_supply_for_owner.sh  nft_token.sh  nft_token_is_locked.sh  nft_tokens.sh  nft_tokens_by_ids.sh  nft_tokens_for_owner.sh  nft_total_supply.sh  test.sh
NFT/scripts/neardev/: dev-account  dev-account.env
NFT/src/: event.rs  lib.rs
NFT/src/nft/: events.rs  events_171.rs  macros.rs  metadata.rs  mod.rs  token.rs  utils.rs
(+377 files in other folders)
