[package]
name = "nft"
version = "0.1.0"
authors = ["Muzikanto <schiriy_maxim@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "=4.0.0-pre.5" }
serde = "1"
serde_json = "1.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
